test/fail/infer13.v3
//@seman
class A { }
class B extends A { }
def m() {
	var x = if(true, g, f);
}
def f(a: A) -> int;
def g(b: B) -> int;
